<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/account" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/email"
        android:textColorHint="@color/inactive"
        android:inputType="text"
        android:textColor="@color/text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintWidth_percent="0.5" />

    <!-- Горизонтальная линия под Username -->
    <View
        android:id="@+id/lineEmail"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/inactive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintWidth_percent="0.6" />

    <!-- Поле для ввода Username -->
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/username"
        android:textColorHint="@color/inactive"
        android:inputType="text"
        android:textColor="@color/text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintWidth_percent="0.5" />

    <!-- Горизонтальная линия под Username -->
    <View
        android:id="@+id/lineUsername"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/inactive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        app:layout_constraintWidth_percent="0.6" />

    <!-- Поле для ввода Password -->

    <!-- Горизонтальная линия под Password -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/text"
        android:textColorHint="@color/inactive"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        app:layout_constraintWidth_percent="0.48" />

    <ImageButton
        android:id="@+id/togglePasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:background="@color/base"
        android:src="@android:color/transparent"
        app:layout_constraintLeft_toRightOf="@id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText" />

    <View
        android:id="@+id/linePassword"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/inactive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintWidth_percent="0.6" />

    <EditText
        android:id="@+id/passwordEditTextReplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/text"
        android:textColorHint="@color/inactive"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintWidth_percent="0.48" />

    <ImageButton
        android:id="@+id/togglePasswordButtonReplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_visibility"
        app:layout_constraintLeft_toRightOf="@id/passwordEditTextReplay"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <View
        android:id="@+id/linePasswordReplay"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/inactive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditTextReplay"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/error"
        android:textSize="15sp"
        android:visibility="gone"
        android:text="@string/error_log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linePasswordReplay"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="110dp"
        android:backgroundTint="@color/activeComponent"
        android:text="@string/sign_up"
        android:textColor="@color/componentActiveText"
        android:textSize="15sp"
        app:cornerRadius="15dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/barrierLeft"
        app:layout_constraintRight_toLeftOf="@id/barrierRight"
        app:layout_constraintTop_toBottomOf="@id/linePasswordReplay"  />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="usernameEditText,lineUsername,passwordEditText,linePassword" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="usernameEditText,lineUsername,passwordEditText,linePassword" />



</androidx.constraintlayout.widget.ConstraintLayout>